# doc-chat-v2

./: .gitignore  app.py  config.py  main.py  pyproject.toml  readme.md  requirements.txt  test_config.py
api/: main.py  schemas.py  session.py
export/: reconstructor.py
graph/: graph.py  nodes.py  state.py  test_graph.py
ingestion/: parser.py  test_parser.py
pages/: audio_explainer.py
vectorstore/: chunker.py  embedder.py  milvus_client.py  test_vectorstore.py
