[project]
name = "doc-chat-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.24",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "pymilvus[milvus-lite]>=2.6.11",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "tiktoken>=0.12.0",
]
