[project]
name = "doc-chat-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.41.0",
    "fastapi>=0.135.3",
    "langchain-core>=1.2.24",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "pymilvus[milvus-lite]>=2.6.11",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "python-pptx>=1.0.2",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.43.0",
]
